samples/_failures_safe/1761413586_b20668_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88727b82.c: In function ‘main’:
./samples/SAFE/__tmp_88727b82.c:141:9: error: expected declaration or statement at end of input
  141 |         printf("Invalid operation selection\n");
      |         ^~~~~~
./samples/SAFE/__tmp_88727b82.c:141:9: error: expected declaration or statement at end of input
